[ag] #233 update documentation accordingly

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,8 +21,8 @@
         "-log=verbose",
         "-pretty",
         "--background-index",
-        "-compile-commands-dir=${workspaceFolder}/build/",
-        "header-insertion=never"
+        "-compile-commands-dir=${workspaceFolder}/build/"
+        // "header-insertion=never"
     ],
     "clang-tidy.buildPath": "./build/", // "${workspaceFolder}/build"
     // TODO(Guillaume): requires integration of https://github.com/microsoft/vscode-cmake-tools/issues/1090
@@ -40,8 +40,13 @@
         "CSL_ENABLE_ALL_EXAMPLES": true,
         // CSL OPT-INS
         // TODO(Guss): test matrix
+        // csl::ensure
         "CSL_ENSURE__OPT_IN__IOSTREAM_SUPPORT": true,
-        "CSL_ENSURE__OPT_IN__FMT_SUPPORT": true
+        "CSL_ENSURE__OPT_IN__FMT_SUPPORT": true,
+        // csl::ag
+        "CSL_AG__ENABLE_IOSTREAM_SUPPORT": true,
+        "CSL_AG__ENABLE_FMTLIB_SUPPORT": true,
+        "CSL_AG__ENABLE_FORMAT_SUPPORT": true
         
     },
     "cmake.options.statusBarVisibility": "compact",
