--- a/tests/ag/CMakeLists.txt
+++ b/tests/ag/CMakeLists.txt
@@ -3,7 +3,7 @@ set(component_name ag)
 # Test: default (no bitfield support)
 set(test_name test_${PROJECT_NAME}_${component_name}_compile_time)
 
-add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
+add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/without_bitfield_support.cpp)
 target_include_directories(${test_name}
 	PRIVATE
 		${CMAKE_CURRENT_SOURCE_DIR}/includes
@@ -23,7 +23,7 @@ add_test(
 # Test: with bitfield support (CSL_AG__ENABLE_BITFIELDS_SUPPORT)
 set(test_name test_${PROJECT_NAME}_${component_name}_bitfield_support_compile_time)
 
-add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test_bitfield_support.cpp)
+add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/with_bitfield_support.cpp)
 target_include_directories(${test_name}
 	PRIVATE
 		${CMAKE_CURRENT_SOURCE_DIR}/includes
@@ -69,7 +69,7 @@ if (NOT TARGET GTest::gtest_main)
 	list(POP_BACK CMAKE_MESSAGE_INDENT)
 endif()
 
-add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test_fmtlib_support.cpp)
+add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/fmtlib_support.cpp)
 target_compile_definitions(${test_name} PRIVATE CSL_AG__ENABLE_FMTLIB_SUPPORT)
 target_include_directories(${test_name}
 	PRIVATE
