[mp] #96 tuple storage: fixing seq API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,11 +47,6 @@
         "editor.tabCompletion": "on",
         "editor.detectIndentation": false
     },
-    "files.associations": {
-        "*.h": "cpp",
-        "*.hpp": "cpp",
-        "*.cpp": "cpp",
-    },
     "debug.terminal.clearBeforeReusing": true,
     "terminal.integrated.profiles.windows": {
         "PowerShell": {
@@ -168,5 +163,66 @@
             "background": "#e94242",
             "foreground": "#1a1b26"
         },
+    },
+    "files.associations": {
+        "*.md": "markdown",
+        "*.h": "cpp",
+        "*.hpp": "cpp",
+        "*.cpp": "cpp",
+        "array": "cpp",
+        "atomic": "cpp",
+        "bit": "cpp",
+        "*.tcc": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "deque": "cpp",
+        "set": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "exception": "cpp",
+        "algorithm": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "memory": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
+        "optional": "cpp",
+        "random": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
+        "fstream": "cpp",
+        "initializer_list": "cpp",
+        "iosfwd": "cpp",
+        "iostream": "cpp",
+        "istream": "cpp",
+        "limits": "cpp",
+        "new": "cpp",
+        "numbers": "cpp",
+        "ostream": "cpp",
+        "ranges": "cpp",
+        "sstream": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "typeinfo": "cpp",
+        "variant": "cpp",
+        "bitset": "cpp",
+        "cstring": "cpp",
+        "charconv": "cpp",
+        "text_encoding": "cpp",
+        "__verbose_abort": "cpp"
     },
 }
