--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,7 +55,8 @@
         "cstring": "cpp",
         "charconv": "cpp",
         "text_encoding": "cpp",
-        "__verbose_abort": "cpp"
+        "__verbose_abort": "cpp",
+        "span": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "debug.terminal.clearBeforeReusing": true,
