[mp] #96 tuple storage: fixing seq API - fix reverse<seq>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -223,6 +223,7 @@
         "cstring": "cpp",
         "charconv": "cpp",
         "text_encoding": "cpp",
-        "__verbose_abort": "cpp"
+        "__verbose_abort": "cpp",
+        "span": "cpp"
     },
 }
