[mp] #96 tuple storage: quick-fix CI

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,18 @@
         "charconv": "cpp",
         "text_encoding": "cpp",
         "__verbose_abort": "cpp",
-        "span": "cpp"
+        "span": "cpp",
+        "ratio": "cpp",
+        "expected": "cpp",
+        "chrono": "cpp",
+        "format": "cpp",
+        "__bit_reference": "cpp",
+        "__node_handle": "cpp",
+        "locale": "cpp",
+        "mutex": "cpp",
+        "__config": "cpp",
+        "execution": "cpp",
+        "iomanip": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "debug.terminal.clearBeforeReusing": true,
