--- a/tests/mp/CMakeLists.txt
+++ b/tests/mp/CMakeLists.txt
@@ -2,6 +2,8 @@ set(component_name mp)
 
 set(test_name test_${PROJECT_NAME}_${component_name}_compile_time)
 
+# TODO: duplicate tuple tests with CSL_MP_TUPLE__DISABLE_IMPLICIT_CONVERSION
+
 add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
 add_dependencies(${test_name} ${PROJECT_NAME}::${component_name})
 target_link_libraries(${test_name}
