--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -224,6 +224,17 @@
         "charconv": "cpp",
         "text_encoding": "cpp",
         "__verbose_abort": "cpp",
-        "span": "cpp"
+        "span": "cpp",
+        "ratio": "cpp",
+        "expected": "cpp",
+        "chrono": "cpp",
+        "format": "cpp",
+        "__bit_reference": "cpp",
+        "__node_handle": "cpp",
+        "locale": "cpp",
+        "mutex": "cpp",
+        "__config": "cpp",
+        "execution": "cpp",
+        "iomanip": "cpp"
     },
 }
