--- a/.github/workflows/cmake-Ubuntu-clang.yml
+++ b/.github/workflows/cmake-Ubuntu-clang.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   cmake-Ubuntu-clang_build_test:
 
-    runs-on: ubuntu-24.04 # ubuntu-latest
+    runs-on: ubuntu-24.04 # ubuntu-latest TODO: ${{ matrix.OS }}
 
     strategy:
         matrix:
@@ -15,9 +15,9 @@ jobs:
             BUILD_TYPE: [Debug, Release]
             STL_IMPLEMENTATION:
               - name: gnu
-                cxx_flag: -stdlib="libstdc++"
+                cxx_flags: -stdlib="libstdc++"
               - name: llvm
-                cxx_flag: -stdlib="libc++ -lc++abi"
+                cxx_flags: -stdlib="libc++ -lc++abi"
 
     steps:
     - uses: actions/checkout@v4
