--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,8 @@ project(csl LANGUAGES CXX)
 set(PROJECT_VERSION 0.1.0)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# TODO: REFACTO: cleanunp + simplication => update CI
-# - include(CMakeDependentOption)
+# WIP: REFACTO: cleanunp + simplication => update CI
+include(CMakeDependentOption)
 
 # CSL_ALL
 # CSL_INSTALL
@@ -30,71 +30,57 @@ if (${PROJECT_SOURCE_DIR} STREQUAL ${PROJECT_BINARY_DIR})
   message(FATAL_ERROR "[${PROJECT_NAME}] : In-source build not recommended")
 endif()
 
-## Components
-# TODO: get ${CMAKE_CURRENT_SOURCE_DIR}/includes/* names ?
-set(CSL_COMPONENT_LIST
-    ag
-    ensure
-    functional
-    mp
-    typeinfo
-    wf
+## Components - detection, list
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/details/make_subdirectory_list.cmake)
+MAKE_SUBDIRECTORY_LIST(
+    DIRECTORY   ${CMAKE_CURRENT_SOURCE_DIR}/includes
+    RESULT      CSL_COMPONENTS_LIST
 )
+message(STATUS "[${PROJECT_NAME}] available components: [${CSL_COMPONENTS_LIST}]")
 
 ### Components - build
-option(CSL_BUILD_ALL "Build all csl components" ON) # force all components build
+option(CSL_BUILD_ALL "CSL: Build all components" ON) # force all components build
+message(VERBOSE "[${PROJECT_NAME}] CSL_BUILD_ALL set to ${CSL_BUILD_ALL}")
+
 unset(CSL_ENABLED_COMPONENTS_LIST)
 unset(CSL_DISABLED_COMPONENTS_LIST)
-message(VERBOSE "[${PROJECT_NAME}] CSL_BUILD_ALL set to ${CSL_BUILD_ALL}")
+
+message(CHECK_START "[${PROJECT_NAME}] enabled components")
 list(APPEND CMAKE_MESSAGE_INDENT "   ")
-foreach(component_name IN LISTS CSL_COMPONENT_LIST)
-    option(CSL_BUILD_${component_name} "Build all csl components" ${CSL_BUILD_ALL})
-    message(VERBOSE "[${PROJECT_NAME}]: [CSL_BUILD_${component_name}] CSL_BUILD_ALL set to ${CSL_BUILD_${component_name}}")
+foreach(component_name IN LISTS CSL_COMPONENTS_LIST)
+
+    option(CSL_BUILD_${component_name} "CSL: Build ${component_name}" ${CSL_BUILD_ALL})
+    message(VERBOSE "[${PROJECT_NAME}]: [CSL_BUILD_${component_name}] set to ${CSL_BUILD_${component_name}}")
+
+    message(CHECK_START "CSL_BUILD_${component_name}")
     if (${CSL_BUILD_${component_name}})
+        message(CHECK_PASS "enabled")
         list(APPEND CSL_ENABLED_COMPONENTS_LIST ${component_name})
+    else()
+        message(CHECK_FAIL "disabled")
     endif()
+
 endforeach()
 list(POP_BACK CMAKE_MESSAGE_INDENT)
+message(CHECK_PASS "done")
 
 ### Components - enabled vs. disabled
-set(CSL_DISABLED_COMPONENTS_LIST ${CSL_COMPONENT_LIST})
+set(CSL_DISABLED_COMPONENTS_LIST ${CSL_COMPONENTS_LIST})
 list(REMOVE_ITEM CSL_DISABLED_COMPONENTS_LIST ${CSL_ENABLED_COMPONENTS_LIST})
-
-#### enabled
-message(STATUS "[${PROJECT_NAME}] enabled components:")
-list(APPEND CMAKE_MESSAGE_INDENT "   ")
-if (NOT CSL_ENABLED_COMPONENTS_LIST)
-    message(STATUS "(none)")
-endif()
-foreach(component_name IN LISTS CSL_ENABLED_COMPONENTS_LIST)
-    message(STATUS "${PROJECT_NAME}::${component_name}")
-endforeach()
-list(POP_BACK CMAKE_MESSAGE_INDENT)
-
-#### disabled
-message(STATUS "[${PROJECT_NAME}] disabled components:")
-list(APPEND CMAKE_MESSAGE_INDENT "   ")
-if (NOT CSL_DISABLED_COMPONENTS_LIST)
-    message(STATUS "(none)")
-endif()
-foreach(component_name IN LISTS CSL_DISABLED_COMPONENTS_LIST)
-    message(STATUS "${PROJECT_NAME}::${component_name}")
-endforeach()
-list(POP_BACK CMAKE_MESSAGE_INDENT)
 
 ### Components - tests
 enable_testing()
-option(CSL_ENABLE_ALL_TESTS "Build all tests for csl" OFF) # force all tests
-message(VERBOSE "[${PROJECT_NAME}] CSL_ENABLE_ALL_TESTS set to ${CSL_ENABLE_ALL_TESTS} ...")
+option(CSL_TEST_ALL "Build all tests for csl" OFF) # force all tests
+message(VERBOSE "[${PROJECT_NAME}] CSL_TEST_ALL set to ${CSL_TEST_ALL} ...")
 
 ### Components - examples 
-option(CSL_ENABLE_ALL_EXAMPLES "Build all examples for csl" OFF) # force all examples
-message(VERBOSE "[${PROJECT_NAME}] CSL_ENABLE_ALL_EXAMPLES set to ${CSL_ENABLE_ALL_EXAMPLES} ...")
+option(CSL_EXAMPLE_ALL "Build all examples for csl" OFF) # force all examples
+message(VERBOSE "[${PROJECT_NAME}] CSL_EXAMPLE_ALL set to ${CSL_EXAMPLE_ALL} ...")
 
-### Opt-ins: Tests, Examples
+### Components - Tests, Examples (Opt-outs)
 foreach(component_name IN LISTS CSL_ENABLED_COMPONENTS_LIST)
-    option(CSL_BUILD_TESTS_${component_name}    "[${PROJECT_NAME}] csl::${component_name} (tests)"   ${CSL_ENABLE_ALL_TESTS})
-    option(CSL_BUILD_EXAMPLES_${component_name} "[${PROJECT_NAME}] csl::${component_name} (example)" ${CSL_ENABLE_ALL_EXAMPLES})
+    option(CSL_TEST_${component_name}    "[${PROJECT_NAME}] csl::${component_name} (tests)"   ${CSL_TEST_ALL})
+    option(CSL_EXAMPLE_${component_name} "[${PROJECT_NAME}] csl::${component_name} (example)" ${CSL_EXAMPLE_ALL})
 endforeach()
 
 # list(LENGTH CSL_ENABLED_TESTS_LIST CSL_ENABLED_TESTS_LIST_length)
@@ -134,15 +120,15 @@ function(csl_create_component component_name)
     )
 
     # test
-    option(CSL_BUILD_TESTS_${component_name} "[${PROJECT_NAME}] csl::${component_name} (tests)" ${CSL_ENABLE_ALL_TESTS})
-    if (CSL_BUILD_TESTS_${component_name})
+    option(CSL_TEST_${component_name} "[${PROJECT_NAME}] csl::${component_name} (tests)" ${CSL_TEST_ALL})
+    if (CSL_TEST_${component_name})
         message(STATUS "[${PROJECT_NAME}] csl::${component_name} (tests)")
         add_subdirectory(${PROJECT_SOURCE_DIR}/tests/${component_name})
     endif()
 
     # example
-    option(CSL_BUILD_EXAMPLES_${component_name} "[${PROJECT_NAME}] csl::${component_name} (example)" ${CSL_ENABLE_ALL_EXAMPLES})
-    if (CSL_BUILD_EXAMPLES_${component_name})
+    option(CSL_EXAMPLE_${component_name} "[${PROJECT_NAME}] csl::${component_name} (example)" ${CSL_EXAMPLE_ALL})
+    if (CSL_EXAMPLE_${component_name})
         if (NOT EXISTS ${PROJECT_SOURCE_DIR}/examples/${component_name}/CMakeLists.txt)
             # message(AUTHOR_WARNING "[${PROJECT_NAME}] : csl::${component_name} has no examples available, skipping ...")
         else()
